--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://github.com/markstos" rel="me">
     <link href="https://mark.stosberg.com/" rel="me">
     <link href="https://mastodon.online/@markstos" rel="me">
+    <link href="https://urbanists.social/@markstos" rel="me">
   </head>
   <body style="margin: 0; padding: 0">
     <a
